samples/_failures_safe/1761596594_851e70_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea19cf8d.c: In function ‘main’:
./samples/SAFE/__tmp_ea19cf8d.c:134:9: error: expected declaration or statement at end of input
  134 |         fprintf(stderr, "Error reading input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_ea19cf8d.c:134:9: error: expected declaration or statement at end of input
